# CRISPR-off-t-engine

./: .gitignore  .pre-commit-config.yaml  README.md  download_data.py  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: github-actions-demo.yml
conf/: config.yaml
conf/data/: default.yaml
conf/data_module/: default.yaml
conf/experiments/: default.yaml
conf/logging/: default.yaml
conf/mode/: default.yaml
conf/model/: default.yaml
data/: .gitignore  Change_seq.csv.dvc
inference_model_modifications/onnx/: crispr_detector.onnx.dvc  crispr_detector_fixed.onnx.dvc  model_surgeon.py  onnx_model_conversion.py
mlflow-serve/: docker-compose.yml
mlflow-serve/frontend/: index.html
mlflow-serve/mlflow/: Dockerfile  README.md  config.yaml  mlflow_model_wrapper.py
mlflow-serve/proxy/: Dockerfile  app.py
model_weights/crispr_bert/: .gitignore  deterministic_best-epoch_49-val_acc_0.87.ckpt.dvc
src/: logger_selector.py  model_selector.py
src/data_modules/: CRISPR_DIPOFF.py  CrisprBERT.py  DeepCNN.py  R_CRISPR.py
src/models/: CRISPR_DIPOFF.py  CrisprBERT.py  DeepCNN.py  R_CRISPR.py
src/run_scripts/: infer.py  sample_run.py  train.py
src/utils/: CRISPR_DIPOFF.py  CrisprBERT.py  DeepCNN.py  R_CRISPR.py  data_visuals.py
